# propy

./: .flake8  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
doc/: generate_open_water_chart.py  generate_open_water_chart_4q.py
literature/: wageningen_b_coefficients.xlsx
scripts/: experiment_4q.ipynb
src/propy/: __init__.py  gawn_burrill.py  propeller.py  wageningen_b.py
test/: Untitled.ipynb  test_gawn_burrill.py  test_propeller.py  test_wageningen_b.py
test/data/: z2_a3.csv  z2_a3.dig  z2_a5.csv  z2_a5.dig  z2_a7.csv  z2_a7.dig  z2_a9.csv  z2_a9.dig  z3_a3.csv  z3_a3.dig  z3_a5.csv  z3_a5.dig  z3_a7.csv  z3_a7.dig  z3_a9.csv  z3_a9.dig  z4_a3.csv  z4_a3.dig  z4_a5.csv  z4_a5.dig  z4_a7.csv  z4_a7.dig  z4_a9.csv  z4_a9.dig  z5_a3.csv  z5_a3.dig  z5_a5.csv  z5_a5.dig  z5_a7.csv  z5_a7.dig  z5_a9.csv  z5_a9.dig  z6_a3.csv  z6_a3.dig  z6_a5.csv  z6_a5.dig  z6_a7.csv  z6_a7.dig  z6_a9.csv  z6_a9.dig  (+8 more)
