[build-system]
python-requires = ">=3.11"
requires        = [
    "setuptools>=61",
    "setuptools_scm>=8"
]
build-backend   = "setuptools.build_meta"

[project]
name            = "propy"
description     = "A package for dimensioning and optimizing (marine) propellers"
dynamic         = ["version"]
dependencies    = [
    "numpy>=2.0",
    "scipy>=1.10",
]
authors         = [
    {name = "Gijs Bruining"}
]
readme          = {file = "README.md", content-type = "text/markdown"}
license         = {file = "LICENSE"}


[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "flake8>=7.0",
    "mypy>=1.12",
    "scipy-stubs"
]

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "6.0"

[tool.mypy]
python_version = "3.13"
strict = true